--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
+package-lock.json
+src/App.js
+src/pages/UserPanel.js
+src/styles/UserPanel.css
